force-app/main/default/staticresources/python/Disappear/src/objects/MEScopeOfWork__c.object
<CustomObject>
    <fields>
        <fullName>Begin_dt_c__c</fullName>
        <label>Begin dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scaling_Factor__c</fullName>
        <label>Scaling Factor</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>MEScopeOfWork</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Scaling_Factor__c</columns>
        <columns>SiebelRowId__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MEScopeOfWork Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MEScopeOfWork</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>